JSdialog: Fix container's padding
Do not set sub container with a margin. This was resulting in
some elements (that are inside of that container) to be properly
contained but all the rest were being set without any surrounding
margins -> leading to misalignment

- Main jsdialog container shouldn't inherit lokdialog padding 0
- We do not need to specifically set `padding: .5em 1 em` because it
- has been already set and inherit from jquery ui CSS rules

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -790,9 +790,12 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 }
 
 .lokdialog.ui-dialog-content.ui-widget-content {
-	padding: 0px;
 	overflow: auto;
 	border-radius: calc(var(--border-radius)/2);
+}
+
+.lokdialog_container:not(.jsdialog-container) .lokdialog.ui-dialog-content.ui-widget-content {
+	padding: 0px;
 }
 
 .lokdialog_canvas {
